--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -25,12 +25,14 @@
 	}
     </style>
     <script>
-      function onSelection(payload) {
-        console.log('Got selection: ' + payload);
-        document.getElementById("output-text").value = payload.text;
-        document.getElementById("output-html").value = payload.html;
-        chrome.extension.onRequest.removeListener(window.onSelection);
-      };
+		function pasteSelection() {
+		  chrome.tabs.getSelected(null, function(tab) {
+		    chrome.tabs.sendRequest(tab.id, {method: "getSelection"}, function (response) {
+		      var text = document.getElementById('text'); 
+		      text.innerHTML = response.data;
+		    });
+		  });
+		}
     </script>
   </head>
   <body>
@@ -38,9 +40,7 @@
 	<h1>Hello extensionizr!</h1>
 	<p>To shut this popup down, edit the manifest file and remove the "default popup" key. To edit it, just edit ext/browser_action/browser_action.html. The CSS is there, too.</p>
 	</div>
-    <script type="text/javascript"> 
-      chrome.extension.onRequest.addListener(onSelection);
-      chrome.tabs.executeScript(null, { file: "contentscript.js" }); 
-    </script>
+	<textarea id="text">This should be replaced with the selected text</textarea> 
+	<button onclick="pasteSelection(); ">Paste Selection</button>
   </body> 
 </html>
