--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -24,16 +24,6 @@
 		font-size: 2em;
 	}
     </style>
-    <script>
-		function pasteSelection() {
-		  chrome.tabs.getSelected(null, function(tab) {
-		    chrome.tabs.sendRequest(tab.id, {method: "getSelection"}, function (response) {
-		      var text = document.getElementById('text'); 
-		      text.innerHTML = response.data;
-		    });
-		  });
-		}
-    </script>
   </head>
   <body>
 	<div id="mainPopup">
@@ -41,6 +31,6 @@
 	<p>To shut this popup down, edit the manifest file and remove the "default popup" key. To edit it, just edit ext/browser_action/browser_action.html. The CSS is there, too.</p>
 	</div>
 	<textarea id="text">This should be replaced with the selected text</textarea> 
-	<button onclick="pasteSelection(); ">Paste Selection</button>
+	<button class="paste">Paste Selection</button>
   </body> 
 </html>
